<resources>
    <string name="app_name">My Project</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="Logout">Logout</string>
    <string name="jeevan_shanti_image_desc">Jeevan shanti</string>
    <string name="jeevan_umang_image_desc">Jeevan umang</string>
    <string name="bima_jyoti_image_desc">Bima jyoti</string>
    <string name="already_have_account">Already have account. Login</string>
    <string name="user_type">User type</string>
    <string name="Life_Insurance_Management">Life Insurance Management Application</string>
</resources>